examples/errors/invalid_cast_int_to_char/main.hd
fn main(): int {
    let i: int = 65;
    let c = i as char;
    return 0;
}
